# rogcat

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  filewriter.rs  filter.rs  lossy_lines.rs  main.rs  parser.rs  profiles.rs  reader.rs  record.rs  subcommands.rs  terminal.rs
