[package]
authors = ["Felix Obenhuber <felix@obenhuber.de>"]
categories = [
    "command-line-utilities",
    "development-tools",
]
description = "A adb logcat wrapper and log processor"
homepage = "https://github.com/flxo/rogcat"
keywords = [
    "android",
    "adb",
    "debugging",
    "log",
    "logcat",
]
license = "MIT"
name = "rogcat"
readme = "README.md"
repository = "https://github.com/flxo/rogcat"
version = "0.4.7-pre"
edition = "2018"

[lib]
name = "rogcat"
path = "src/lib.rs"

[[bin]]
name = "rogcat"
path = "src/main.rs"

[dependencies]
atty = "0.2.14"
bytes = "1.5.0"
# CLAP V4 SUCKS!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
clap = { version = "3.2.25", features = ["cargo", "derive", "color"] }
clap_complete = "3.2.5"

config = "0.13.4"
crc = "1.8.1"
csv = "1.3.0"
directories = "1.0.2"
failure = "0.1.8"
futures = "0.3.30"
handlebars = "1.1.0"
indicatif = "0.11.0"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = { version = "1.0.194", features = ['derive'] }
serde_json = "1.0.110"
term_size = "0.3.2"
termcolor = "1.4.0"
time = { version = "0.3.31", features = ["macros", "local-offset", "formatting"] }
tokio = { version = "1.35.1", features = ["io-std", "io-util", "fs", "net", "signal", "process", "rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.10", features = ["codec"] }
toml = "0.5.1"
url = "1.7.2"
which = "2.0.1"
zip = "0.5.2"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-socketcan = "0.3.1"
